<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Guardar imagen</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="url">URL:</string>
    <string name="guardar_como">GUARDAR COMO:</string>
    <string name="guardar_en">GUARDAR EN:</string>
    <string name="externa_privada">EXTERNA PRIVADA</string>
    <string name="externa_publica">EXTERNA PUBLICA</string>
    <string name="descargar">DESCARGAR</string>

</resources>
